--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     }
 
     function floodFill(x, y) {
-        if (isFieldOutsideBoard(y, x) || isFieldEmpty(x, y)) {
+        if (isFieldOutsideBoard(x, y) || isFieldEmpty(x, y)) {
             return;
         }
 
@@ -291,8 +291,8 @@
         }
     }
 
-    function isFieldOutsideBoard(y, x) {
-        return y < 0 || y > width - 1 || x < 0 || x > height - 1;
+    function isFieldOutsideBoard(x, y) {
+        return (0 > y || y > width - 1) || (0 > x || x > height - 1);
     }
 
     function isFieldEmpty(x, y) {
