--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 
 <script>
     // TODO od tąd
-    var width;
-    var height;
+    var gameBoard = {width: 0, height: 0};
     var numberOfBombs;
     var isGameDone;
     var colors = ["blue", "green", "red", "purple", "orange", "pink"];
@@ -50,8 +49,8 @@
             gameDiv.parentNode.removeChild(gameDiv);
         }
         numberOfBombs = document.getElementById("bombs").value;
-        width = document.getElementById("width").value;
-        height = document.getElementById("height").value;
+        gameBoard.width = document.getElementById("width").value;
+        gameBoard.height = document.getElementById("height").value;
         isGameDone = false;
         cells = fillTwoDimensionalArray();
         createBorderTable();
@@ -70,9 +69,9 @@
 
     function fillTwoDimensionalArray() {
         var array = [];
-        for (var i = 0; i < height; i++) {
+        for (var i = 0; i < gameBoard.height; i++) {
             array[i] = [];
-            for (var j = 0; j < width; j++) {
+            for (var j = 0; j < gameBoard.width; j++) {
                 array[i][j] = getDefaultFieldObject();
             }
         }
@@ -93,12 +92,12 @@
         table.setAttribute("id", "gameBoard");
         gameDiv.appendChild(table);
 
-        for (var i = 0; i < height; i++) {
+        for (var i = 0; i < gameBoard.height; i++) {
             var row = document.createElement("tr");
             row.setAttribute("id", "row" + i.toString());
             table.appendChild(row);
 
-            for (var j = 0; j < width; j++) {
+            for (var j = 0; j < gameBoard.width; j++) {
                 var cell = document.createElement("td");
                 cell.setAttribute("onmousedown", "playerMove(event, this)");
                 cell.setAttribute("data-x", i.toString());
@@ -112,8 +111,8 @@
     function plantBombs() {
         for (var i = 0; i < numberOfBombs; i++) {
             while (true) {
-                var x = Math.floor(Math.random() * height);
-                var y = Math.floor(Math.random() * width);
+                var x = Math.floor(Math.random() * gameBoard.height);
+                var y = Math.floor(Math.random() * gameBoard.width);
                 if (!cells[x][y].isBomb) {
                     cells[x][y].isBomb = true;
                     break;
@@ -124,8 +123,8 @@
     }
 
     function countBombsAdjacentToFields() {
-        for (var i = 0; i < height; i++) {
-            for (var j = 0; j < width; j++) {
+        for (var i = 0; i < gameBoard.height; i++) {
+            for (var j = 0; j < gameBoard.width; j++) {
                 isBombAdjacentToField(i, j);
             }
         }
@@ -145,7 +144,7 @@
     }
 
     function isFieldInBoard(x, y) {
-        return (0 <= x && x < height) && (0 <= y && y < width);
+        return (0 <= x && x < gameBoard.height) && (0 <= y && y < gameBoard.width);
     }
 
     function incrementNumberOfBombsAdjacentToField(x, y) {
@@ -209,8 +208,8 @@
     }
 
     function displayAllBombs() {
-        for (var i = 0; i < height; i++) {
-            for (var j = 0; j < width; j++) {
+        for (var i = 0; i < gameBoard.height; i++) {
+            for (var j = 0; j < gameBoard.width; j++) {
                 if (cells[i][j].isBomb) {
                     changeFieldToBomb(i, j);
                 }
@@ -232,8 +231,8 @@
 
     function countPointsFromFlags() {
         var numberOfPoints = 0;
-        for (var i = 0; i < height; i++) {
-            for (var j = 0; j < width; j++) {
+        for (var i = 0; i < gameBoard.height; i++) {
+            for (var j = 0; j < gameBoard.width; j++) {
                 if (cells[i][j].isBomb && cells[i][j].isFlag) {
                     numberOfPoints++;
                 }
@@ -247,8 +246,8 @@
 
     function countFieldsUndiscovered() {
         var numberOfUndiscoveredFields = 0;
-        for (var i = 0; i < height; i++) {
-            for (var j = 0; j < width; j++) {
+        for (var i = 0; i < gameBoard.height; i++) {
+            for (var j = 0; j < gameBoard.width; j++) {
                 if (!cells[i][j].isBomb && !cells[i][j].isCellDiscovered) {
                     numberOfUndiscoveredFields++;
                 }
@@ -292,7 +291,7 @@
     }
 
     function isFieldOutsideBoard(x, y) {
-        return (0 > y || y > width - 1) || (0 > x || x > height - 1);
+        return (0 > y || y > gameBoard.width - 1) || (0 > x || x > gameBoard.height - 1);
     }
 
     function isFieldEmpty(x, y) {
