--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 <script>
     // TODO od tąd
     var gameBoard = {width: 0, height: 0, cells: null, numberOfFlaggedFields: 0};
-    var game = {numberOfBombs: 0, isGameDone: false, isBoardGenerated: false};
+    var game = {numberOfBombs: 0, isGameDone: false, isBoardGenerated: false, messageBox: null};
     var colors = ["blue", "green", "red", "purple", "orange", "pink"];
-    var messageBox;
     // TODO do tąd, takie rzeczy jak width, height, cells itp powinny być w jednym obiekcie.
     startGame();
 
@@ -60,7 +59,7 @@
         var divToDisplayMessages = document.createElement("div");
         divToDisplayMessages.setAttribute("id", "messageBox");
         document.getElementById("gameDiv").appendChild(divToDisplayMessages);
-        messageBox = document.getElementById("messageBox");
+        game.messageBox = document.getElementById("messageBox");
     }
 
     function fillTwoDimensionalArray() {
@@ -149,7 +148,7 @@
 
     function playerMove(event, object) {
         if (game.isGameDone) {
-            messageBox.innerHTML = "Rozpocznij nowa gre";
+            game.messageBox.innerHTML = "Rozpocznij nowa gre";
         } else {
             var x = parseInt(object.getAttribute("data-x"));
             var y = parseInt(object.getAttribute("data-y"));
@@ -169,7 +168,7 @@
             if (!cellToDiscover.isCellDiscovered) {
                 if (cellToDiscover.isBomb) {
                     displayAllBombs();
-                    messageBox.innerHTML = "przegrales";
+                    game.messageBox.innerHTML = "przegrales";
                     game.isGameDone = true;
                 } else {
                     if (cellToDiscover.numberOfBombsAdjacent > 0) {
@@ -198,7 +197,7 @@
                 cellToSetFlag.isFlag = true;
                 gameBoard.numberOfFlaggedFields++;
             }
-            messageBox.innerHTML = "Pozostalo bomb: " + (game.numberOfBombs - gameBoard.numberOfFlaggedFields);
+            game.messageBox.innerHTML = "Pozostalo bomb: " + (game.numberOfBombs - gameBoard.numberOfFlaggedFields);
             cellToSetFlag.gameField.appendChild(flagImage);
         }
     }
@@ -219,7 +218,7 @@
 
     function checkIfPlayerWins() {
         if (countPointsFromFlags() == game.numberOfBombs || countFieldsUndiscovered() == 0) {
-            messageBox.innerHTML = "wygrales";
+            game.messageBox.innerHTML = "wygrales";
             game.isGameDone = true;
         } else {
         }
