--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <script>
     var gameBoard = {width: 0, height: 0, cells: null, numberOfFlaggedFields: 0};
     var game = {numberOfBombs: 0, isGameDone: false, isBoardGenerated: false, messageBox: null};
-    var colors = ["blue", "green", "red", "purple", "orange", "pink"];
+    var colors = ["blue", "green", "red", "purple", "orange", "yellow", "brown", "pink"];
     startGame();
 
     function startGame() {
