--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 isBombAdjacentToField(i, j);
             }
         }
-     //   displayAllBombs();
+        displayAllBombs();
     }
 
     function isBombAdjacentToField(x, y) {
