--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             game.messageBox.innerHTML = "wygrales";
             game.isGameDone = true;
         } else {
-        }
+        } // co to kurwa jest
     }
 
     function countPointsFromFlags() {
