--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     }
 
     function checkIfPlayerWins() {
-        if (countPointsFromFlags() == game.numberOfBombs || countFieldsUndiscovered() == 0) {
+        if (countPointsFromFlags() == game.numberOfBombs || countFieldsUndiscovered() == 0) { // if wydzielić do metody
             game.messageBox.innerHTML = "wygrales";
             game.isGameDone = true;
         } else {
