--- a/index.html
+++ b/index.html
@@ -289,8 +289,7 @@
     }
 
     function isFieldOutsideBoard(x, y) {
-        return (0 > y || y > gameBoard.width - 1) || (0 > x || x > gameBoard.height - 1); // coś Ty się tak uparł na to -1?
-        // nie może być y >= gameBoard.width) ??
+        return (0 > y || y >= gameBoard.width) || (0 > x || x >= gameBoard.height);
     }
 
     function isFieldEmpty(x, y) {
